--- a/fin_pjt/community/templates/community/index.html
+++ b/fin_pjt/community/templates/community/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="no-js">
 {% load static %}
 	<head>
+		<meta http-equiv="Compatible" content="no-cache"/>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Diagonal Slideshow | Codrops</title>
@@ -79,7 +80,9 @@
 						{% for poster in posters %}
 							<div class="slide">
 								<div class="slide__img-wrap">
-									<a class="text-white" href="{% url 'movies:detail' poster.title %}"><div class="slide__img" style="background-image: url('https://image.tmdb.org/t/p/w500/{{ poster.poster }}');"></div></a>	
+									<!-- <a class="text-white" href="{% url 'movies:detail' poster.title %}"> -->
+										<div class="slide__img" style="background-image: url('https://image.tmdb.org/t/p/w500/{{ poster.poster }}');"></div>
+									<!-- </a>	 -->
 								</div>
 								<div class="slide__side"></div>
 								<div class="slide__title-wrap">
