--- a/fin_pjt/community/templates/community/detail.html
+++ b/fin_pjt/community/templates/community/detail.html
@@ -761,14 +761,15 @@ background:#dcdcdc;
             <div class="tab-pane fade active show" id="pills-reviews" role="tabpanel" aria-labelledby="pills-reviews-tab">                
                 <div class="bg-white rounded shadow-sm p-4 mb-4 restaurant-detailed-ratings-and-reviews">
                     {% comment %} <a href="#" class="btn btn-outline-danger btn-sm float-right">DELETE</a> {% endcomment %}
+                    {% if user %}
                     <div>
                       <a href="{% url 'community:update' review.pk %}" class="btn btn-outline-info btn-sm float-right">UPDATE</a>
                       <form action="{% url 'community:delete' review.pk %}" method="POST">
                         {% csrf_token %}
                         <button class="btn btn-outline-danger btn-sm float-right">&nbsp;&nbsp;DELETE</button>
                       </form>
-                    
                     </div>
+                    {% endif %}
                     <a href={% url 'movies:detail' review.movie_title %}>
                         <h1 class="lead text-dark"><i class="fas fa-quote-left"></i> {{review.movie_title}}</h1>
                     </a>
