--- a/fin_pjt/community/templates/community/home.html
+++ b/fin_pjt/community/templates/community/home.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Shuffle Bootstrap Template - Index</title>
+  <title>MOVIES</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
