--- a/fin_pjt/movies/templates/movies/detail.html
+++ b/fin_pjt/movies/templates/movies/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MOVIES</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b712e62e59.js" crossorigin="anonymous"></script>
     <style>
@@ -12,6 +12,8 @@
         width: 100%; /* Full width */
         position: fixed;
         top: 0;
+        z-index: 100;
+        background-color: rgba(52, 58, 64, 0.5);
       }
       .background {
           max-height: 300px;
