--- a/fin_pjt/static/css/base.css
+++ b/fin_pjt/static/css/base.css
@@ -98,7 +98,7 @@ a:focus {
 
 .frame {
 	position: fixed;
-	z-index: 10000;
+	z-index: 1000;
 	top: 5rem;
 	left: 0;
 	width: 100%;
@@ -189,6 +189,11 @@ a:focus {
 	top: 10%;
 	position: absolute;
 }
+.slide__img-wrap a{
+	display:block; 
+	width: 100%; 
+	height: 100%;
+}
 
 .slideshow__deco {
 	grid-area: slide;
@@ -206,7 +211,7 @@ a:focus {
 	background: none;
 	width: 3rem;
 	height: 3rem;
-	z-index: 100000;
+	z-index: 1000;
 	border: 0;
 	padding: 0;
 	margin: 0;
