--- a/fin_pjt/accounts/templates/accounts/profile.html
+++ b/fin_pjt/accounts/templates/accounts/profile.html
@@ -37,7 +37,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyPortfolio Bootstrap Template - Index</title>
+  <title>MOVIES</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -58,12 +58,6 @@
   <!-- Template Main CSS File -->
   <link href="{% static 'profile/assets/css/style.css' %}" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyPortfolio - v2.1.0
-  * Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body style='background-color:rgb(52, 58, 64)'>
